fix(content-sidebar): remove horizontal scrolling in content sidebar

--- a/src/elements/content-sidebar/SidebarContent.scss
+++ b/src/elements/content-sidebar/SidebarContent.scss
@@ -49,7 +49,8 @@ $sidebarScrollContentIncreasedWidth: $sidebarScrollContentWidth + 40px;
         right: 0;
         bottom: 0;
         left: 0;
-        overflow: auto;
+        overflow-y: auto;
+        overflow-x:hidden;
     }
 
     .bcs-scroll-content {
